--- a/app/templates/visitor/voyage_organise_details.html
+++ b/app/templates/visitor/voyage_organise_details.html
@@ -9,9 +9,9 @@
 <div class="detailed-card-voyage">
     <div class="image">
         <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
-        {% comment %} <span class="reaction">
+        <span class="reaction">
             <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
-        </span> {% endcomment %}
+        </span> 
     </div>
     <div class="body">
         <span class="title">{{ avoir.id_voyage.titre_voyage }}</span>
