--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -23,6 +23,7 @@
 
 body {
     font-family: Poppins, sans-serif;
+    scroll-behavior: smooth;
 }
 
 /* body .container {
@@ -33,23 +34,20 @@ body {
 }
 
 .hide {
-    display: none;
+    display: none; 
 }
 
 /* header styles */
 
 header {
     position: fixed;
-    /* background-color: rgba(164, 164, 185, 0.168); */
     top: 0;
     background-color: rgb(255, 255, 255);
     z-index: 998;
     width: 100%;
-    /* backdrop-filter: blur(50px); */
-    /* display: none; */
 }
 
-header .inner1, header .inner2 {
+header .inner1 {
     padding-inline: 100px;
     padding-block: 10px;
     display: flex;
@@ -58,12 +56,17 @@ header .inner1, header .inner2 {
     border-bottom: 1px solid var(--second-underline);
 }
 
+header .inner2 {
+    padding-inline: 100px;
+    padding-block: 10px;
+    border-bottom: 1px solid var(--second-underline);
+}
+
 header .inner1 .logo img {
     width: 150px;
 }
 
-
-.search {
+header .inner1 .search {
     width: 40%;
     position: relative;
 }
@@ -94,7 +97,8 @@ header .inner1 .logo img {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: var(--main-border-radius)
+    border-radius: var(--main-border-radius);
+    cursor: pointer;
 }
 
 .search span i {
@@ -259,30 +263,35 @@ header .inner2 ul li a:hover::before {
     translate: 0%;
 }
 
-/* main styles */
+/* block main styles */
+
+body .container {
+    background-color: rgba(117, 114, 114, 0.189);
+}
 
 main {
     /* padding-top: 100px; */
-    position: relative;
+    /* margin-top: 50px; */
 }
 
-main .first {
-    height: 100vh;
-    padding-top: 100px;
-    background: linear-gradient(90deg, #000000d3,   rgba(0, 0, 0, 0.448)), url('../assets/background-home.jpg') center/cover;
+.first {
+    background-color: green;
 }
 
-main .first h1 {
+.first h1 {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 250px;
     color: white;
     font-weight: lighter;
-    margin-top: 200px;
     letter-spacing: 3px;
     text-transform: uppercase;
     font-size: 5rem;
     text-align: center;
 }
 
-main .first h1 span {
+.first h1 span {
     background-color: var(--main--green);
     border-radius: var(--main-border-radius);
     font-weight: 400;
@@ -290,11 +299,9 @@ main .first h1 span {
     padding: 15px;
 }
 
-main .first .services-cards {
+.first .services-cards {
     position: absolute;
-    top: calc(100vh - 10%);
-    margin-top: 100px;
-    /* background-color: red; */
+    top: 600px;
     display: flex;
     justify-content: center;
     gap: 50px;
@@ -302,7 +309,7 @@ main .first .services-cards {
     width: 100%;
 }
 
-main .first .services-cards .card {
+.first .services-cards .card {
     background-color: var(--main-background-card);
     display: flex;
     flex-direction: column;
@@ -312,22 +319,31 @@ main .first .services-cards .card {
     border-radius: var(--main-border-radius);
     height: 200px;
     width: 200px;
-    box-shadow: var(--main-shadow);
+    box-shadow: var(--main-shadow-hovered);
+    backdrop-filter: blur(20px);
+    cursor: pointer;
+    transition: all .2s ease;
 }
 
-main .first .services-cards .card .icon {
+.first .services-cards .card:hover {
+    background-color: rgba(100, 100, 100, 0.2);
+    color: #fff;
+    transform: translateY(-15px);
+}
+
+.first .services-cards .card .icon {
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-size: 3rem;
 }
 
-main .first .services-cards .card .icon img {
+.first .services-cards .card .icon img {
     width: 60px;
     height: 60px;
 }
 
-main .first .services-cards .card .text {
+.first .services-cards .card .text {
     text-align: center;
     font-size: 1.2rem;
     padding: 10px;
@@ -338,7 +354,7 @@ main .first .services-cards .card .text {
 
 }
 
-main .second {
+.second {
     padding: 100px;
     margin-top: 100px;
     display: flex;
@@ -350,7 +366,7 @@ main .second {
 
 /* minimal cards styling */
 
-main .mini-card-voyage {
+.mini-card-voyage {
     width: 400px;
     height: 500px;
     border: 1px solid var(--second-underline);
@@ -361,7 +377,7 @@ main .mini-card-voyage {
     overflow: hidden;
 }
 
-main .mini-card-voyage .image {
+.mini-card-voyage .image {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -372,7 +388,7 @@ main .mini-card-voyage .image {
     /* padding: 5px; */
 }
 
-main .mini-card-voyage .image img {
+.mini-card-voyage .image img {
     border-top-right-radius: var(--main-border-radius);
     border-top-left-radius: var(--main-border-radius);
     overflow: hidden;
@@ -382,7 +398,7 @@ main .mini-card-voyage .image img {
     object-fit: cover;
 }
 
-main .mini-card-voyage .image .reaction img {
+.mini-card-voyage .image .reaction img {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -393,12 +409,12 @@ main .mini-card-voyage .image .reaction img {
     transition: all .2s ease;
 }
 
-main .mini-card-voyage .image .reaction img:hover {
+.mini-card-voyage .image .reaction img:hover {
     scale: 1.2;
 }
 
 
-main .mini-card-voyage .body {
+.mini-card-voyage .body {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -411,7 +427,7 @@ main .mini-card-voyage .body {
     border-bottom-right-radius: var(--main-border-radius);
 }
 
-main .mini-card-voyage .body .localisation {
+.mini-card-voyage .body .localisation {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -419,7 +435,7 @@ main .mini-card-voyage .body .localisation {
     height: fit-content;
 }
 
-main .mini-card-voyage .body form button {
+.mini-card-voyage .body form button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -433,13 +449,13 @@ main .mini-card-voyage .body form button {
     transition: all .2s ease;
 }
 
-main .mini-card-voyage .body form button:hover {
+.mini-card-voyage .body form button:hover {
     box-shadow: var(--main-shadow-hovered);
 }
 
 /* detailed cards styling */
 
-main .detailed-card-voyage {
+.detailed-card-voyage {
     max-width: 100%;
     margin: 20px 100px;
     padding: 20px;
@@ -453,7 +469,7 @@ main .detailed-card-voyage {
     overflow: hidden;
 }
 
-main .detailed-card-voyage .image {
+.detailed-card-voyage .image {
     width: 100%;
     height: fit-content;
     /* display: flex;
@@ -463,7 +479,7 @@ main .detailed-card-voyage .image {
     border: 1px solid green;
 }
 
-main .detailed-card-voyage .image img {
+.detailed-card-voyage .image img {
     overflow: hidden;
     width: 100%; 
     height: auto; 
@@ -473,7 +489,7 @@ main .detailed-card-voyage .image img {
 
 /* vols styling */
 
-main .vols-box {
+.vols-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -482,20 +498,20 @@ main .vols-box {
     box-shadow: var(--main-shadow-hovered);
 }
 
-main .vols-box .vol {
+.vols-box .vol {
     border: 1px solid black; 
     width: 100%;
     padding: 10px;
 }
 
-main .vols-box .vol img {
+.vols-box .vol img {
     width: 80px;
     height: auto;
 }
 
 /* comments styling */
 
-main .comments {
+.comments {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -505,11 +521,8 @@ main .comments {
     box-shadow: var(--main-shadow-hovered);
 }
 
-main .comments h4 {
-    width: 100%;
-}
 
-main .comments .comment {
+.comments .comment {
 
 }
 
