--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,6 @@
     {% block block_css %}{% endblock block_css %}
 </head>
 <body>
-<div class="container">
     <header>
         <div class="inner1">
             <div class="logo">
@@ -50,8 +49,8 @@
         </div>
 
     </header>
-
-    <main> {% block main %} {% endblock %} </main>
+    <div class="container"></div>
+    {% block main %} {% endblock %}
 
     <footer>
         <section class="Paiement">
@@ -130,7 +129,6 @@
             </div>
         </section>
     </footer>
-</div>
     {% block js_block %} {% endblock %} 
     <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
 </body>
