--- a/app/templates/visitor/special_omra.html
+++ b/app/templates/visitor/special_omra.html
@@ -2,6 +2,13 @@
 {% load static %}
 {% block url_6_class %} active {% endblock url_6_class %}
 {% block title %} voyage-organise {% endblock title %}
+{% block block_css %}
+<style>
+    .mini-card-voyage .body {
+        gap: 25px;
+    }
+</style>
+{% endblock block_css %}
 {% block main %}
 
 <section class="second">
@@ -15,12 +22,14 @@
             </span>
         </div>
         <div class="body">
-            <span class="title">{{ avoir_instance.id_voyage.titre_voyage }}</span>
-            <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ avoir_instance.id_ville.id_pays.nom_pays }}, {{ avoir_instance.id_ville.nom_ville }}</span>
-            <span class="price">Prix: <span>{{ avoir_instance.id_voyage.prix_voyage }} Dhs</span></span>
+            <div class="title-localisation">
+                <span class="title">{{ avoir_instance.id_voyage.titre_voyage }}</span>
+                <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ avoir_instance.id_ville.id_pays.nom_pays }}, {{ avoir_instance.id_ville.nom_ville }}</span>
+            </div>
+            <span class="price"><img src="{% static 'assets/background-pricing.png' %}" alt="background-pricing">Prix: <span>{{ avoir_instance.id_voyage.prix_voyage }} MAD</span></span>
             <span class="rating">Durée: <span>{{ avoir_instance.id_voyage.duree_voyage }} jours / {{ avoir_instance.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
             <form method="get" action="/voyage_organise_details/{{ avoir_instance.id_voyage.id_voyage }}">
-                <button type="submit">Details</button>
+                <button type="submit"><i class="fa-solid fa-angles-right">&nbsp;&nbsp;</i>Details</button>
             </form>
                      
         </div>        
