--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -10,6 +10,7 @@
 :root {
     font-size: 16px;
     --main--green: #3DD6D0;
+    /* --main--green: rgb(242, 70, 70); */
     --main-gray: #808080;
     /* --main-gray: #fff5f5; */
     --second-gray: rgb(148, 147, 147);
@@ -17,7 +18,8 @@
     --second-underline: #dddddd;
     --main-border-radius: 30px;
     --main-shadow: 0 2px 6px rgba(180, 177, 177, 0.442);
-    --main-shadow-hovered: 0 2px 6px rgba(180, 177, 177, 0.749);
+    --main-shadow-hovered: 0 2px 20px rgba(180, 177, 177, 0.749);
+    --secondary-shadow-hovered: 0 2px 6px rgba(180, 177, 177, 0.749);
     --main-background-card: rgb(253, 253, 253);
 }
 
@@ -150,7 +152,7 @@ header .inner1 .menu {
 }
 
 header .inner1 .log:hover {
-    box-shadow: var(--main-shadow-hovered);
+    box-shadow: var(--secondary-shadow-hovered);
 }
 
 header .inner1 .menu ul {
@@ -269,20 +271,17 @@ body .container {
     background-color: rgba(117, 114, 114, 0.189);
 }
 
-main {
-    /* padding-top: 100px; */
-    /* margin-top: 50px; */
-}
+/* main {
+} */
 
-.first {
-    background-color: green;
-}
+/* .first {
+} */
 
 .first h1 {
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 250px;
+    top: 300px;
     color: white;
     font-weight: lighter;
     letter-spacing: 3px;
@@ -290,6 +289,24 @@ main {
     font-size: 5rem;
     text-align: center;
 }
+
+.first h2 {
+    width: fit-content;
+    left: 50%;
+    padding: 10px 20px;
+    text-align: center;
+    position: absolute;
+    top: 150px;
+    color: rgb(204, 201, 201);
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 2rem;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.126);
+    box-shadow: 0 3px 3px #000;
+    transform: translateX(-50%);
+}
+
 
 .first h1 span {
     background-color: var(--main--green);
@@ -319,7 +336,7 @@ main {
     border-radius: var(--main-border-radius);
     height: 200px;
     width: 200px;
-    box-shadow: var(--main-shadow-hovered);
+    box-shadow: var(--secondary-shadow-hovered);
     backdrop-filter: blur(20px);
     cursor: pointer;
     transition: all .2s ease;
@@ -347,7 +364,6 @@ main {
     text-align: center;
     font-size: 1.2rem;
     padding: 10px;
-    /* border: 1px solid black; */
     font-variant: small-caps;
     font-weight:800;
     height: 60px;
@@ -364,31 +380,41 @@ main {
     gap: 30px;
 }
 
-/* minimal cards styling */
 
-.mini-card-voyage {
+/* minimal hotel's and travel's cards styles */
+.mini-card-hotel, .mini-card-voyage {
     width: 400px;
-    height: 500px;
+    height: 450px;
     border: 1px solid var(--second-underline);
     border-radius: var(--main-border-radius);
     display: flex;
     flex-direction: column;
     box-shadow: var(--main-shadow);
     overflow: hidden;
+    transition: box-shadow .5s ease;
 }
 
-.mini-card-voyage .image {
+.mini-card-hotel:hover, .mini-card-voyage:hover {
+    box-shadow: var(--main-shadow-hovered);
+}
+
+.mini-card-hotel:hover .image img, .mini-card-voyage:hover .image img {
+    scale: 1.05;
+}
+
+.mini-card-hotel .image, .mini-card-voyage .image {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     border-top-right-radius: var(--main-border-radius);
     border-top-left-radius: var(--main-border-radius);
     position: relative;
-    /* padding: 5px; */
+    overflow: hidden;
 }
 
-.mini-card-voyage .image img {
+.mini-card-hotel .image img, .mini-card-voyage .image img {
     border-top-right-radius: var(--main-border-radius);
     border-top-left-radius: var(--main-border-radius);
     overflow: hidden;
@@ -396,46 +422,74 @@ main {
     height: 250px; 
     display: block;
     object-fit: cover;
+    transition: scale 0.3s ease-in-out;
 }
 
-.mini-card-voyage .image .reaction img {
+
+.mini-card-hotel .image .reaction img, .mini-card-voyage .image .reaction img {
     position: absolute;
     top: 20px;
     right: 20px;
     width: 40px; 
     height: 40px;
     cursor: pointer; 
-    /* box-shadow: 0 0 10px #eee; */
-    transition: all .2s ease;
+    transition: scale .2s ease;
 }
 
-.mini-card-voyage .image .reaction img:hover {
+.mini-card-hotel .image .reaction img:hover, .mini-card-voyage .image .reaction img:hover {
     scale: 1.2;
 }
 
 
-.mini-card-voyage .body {
+.mini-card-hotel .body, .mini-card-voyage .body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    gap: 10px;
+    padding: 0 10px;
+    gap: 15px;
     height: 100%;
     background-color: var(--main-background-card);
     border-bottom-left-radius: var(--main-border-radius);
     border-bottom-right-radius: var(--main-border-radius);
+
 }
 
-.mini-card-voyage .body .localisation {
+.mini-card-hotel .body .title-localisation, .mini-card-voyage .body .title-localisation {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
 }
 
-.mini-card-voyage .body form button {
+.mini-card-hotel .body .title-localisation .title, .mini-card-voyage .body .title-localisation .title {
+    font-weight: 500;
+}
+
+.mini-card-hotel .body .title-localisation .localisation, .mini-card-voyage .body .title-localisation .localisation {
+    font-style: italic;
+    color: var(--main-gray);
+}
+
+.mini-card-hotel .body .price, .mini-card-voyage .body .price {
+    position: relative;
+    z-index: 0;
+    margin-block: 5px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+}
+
+.mini-card-hotel .body .price img, .mini-card-voyage .body .price img {
+    position: absolute;
+    top:-20px ;
+    left:-30px ;
+    width: 200px;
+    z-index: -1;
+    transform: rotate(-10deg);
+}
+
+.mini-card-hotel .body form button, .mini-card-voyage .body form button {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -446,11 +500,21 @@ main {
     font-weight: 600;
     background-color: var(--main--green);
     cursor: pointer;
-    transition: all .2s ease;
+    transition: all .3s ease;
 }
 
-.mini-card-voyage .body form button:hover {
-    box-shadow: var(--main-shadow-hovered);
+
+.mini-card-hotel .body form button i, .mini-card-voyage .body form button i {
+    transition: .3s all ease;
+}
+
+.mini-card-hotel .body form button:hover i, .mini-card-voyage .body form button:hover i {
+    transform: translateX(3px);
+}
+
+
+.mini-card-hotel .body form button:hover, .mini-card-voyage .body form button:hover {
+    box-shadow: var(--secondary-shadow-hovered);
 }
 
 /* detailed cards styling */
@@ -495,7 +559,7 @@ main {
     justify-content: center;
     align-items: center;
     margin: 20px 100px;
-    box-shadow: var(--main-shadow-hovered);
+    box-shadow: var(--secondary-shadow-hovered);
 }
 
 .vols-box .vol {
@@ -518,13 +582,13 @@ main {
     padding: 10px;
     align-items: center;
     margin: 20px 100px;
-    box-shadow: var(--main-shadow-hovered);
+    box-shadow: var(--secondary-shadow-hovered);
 }
 
 
-.comments .comment {
+/* .comments .comment {
 
-}
+} */
 
 /* footer styles */
 
@@ -643,7 +707,7 @@ footer .contact-news-letter .email-box input::placeholder {
 }
 
 .search input:hover {
-    box-shadow: var(--main-shadow-hovered);
+    box-shadow: var(--secondary-shadow-hovered);
 }
 
 footer .contact-news-letter .email-box span {
