--- a/app/templates/visitor/home.html
+++ b/app/templates/visitor/home.html
@@ -53,7 +53,9 @@
 {% endblock %}
 {% block main %}
     <section class="first">
+        <h2>VOTRE AGENCE DE VOYAGE EN LIGNE</h2>
         <h1>Voyager <span>le monde</span></h1>
+
         <div class="services-cards">
             <div class="card">
                 <div class="icon">
