--- a/app/templates/visitor/hotels.html
+++ b/app/templates/visitor/hotels.html
@@ -7,7 +7,7 @@
 <section class="second">
     {% for hotel in query %}
          
-    <div class="mini-card-voyage">
+    <div class="mini-card-hotel">
         <div class="image">
             <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
             <span class="reaction">
@@ -15,12 +15,15 @@
             </span>
         </div>
         <div class="body">
-            <span class="title">{{ hotel.nom_hotel }}</span>
-            <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ hotel.id_ville.nom_ville }}</span>
-            <span class="price">Prix par nuit: <span>{{ hotel.prix_hotel }} Dhs</span></span>
-            <span class="type_ch">Type Chambre: <span>{{hotel.type_chambre}}</span></span>
+            <div class="title-localisation">
+                <span class="title">{{ hotel.nom_hotel }}</span>
+                <span class="localisation"><i class="fa-solid fa-location-dot"></i>&nbsp;{{ hotel.id_ville.nom_ville }}</span>
+            </div>
+            <div class="price"><img src="{% static 'assets/background-pricing.png' %}" alt="background-pricing"><span>{{ hotel.prix_nuit }} MAD/Pers.</span></div>
+            <span class="type_ch">Type Chambre : <span>{{hotel.type_chambre}}</span></span>
+            <span class="type_ch">Petit dejeuner : <span>{% if hotel.petit_dejeuner%}Inclus{% else %}Non Inclus{% endif %}</span></span>
             <form method="get" action="/hotel_details/{{ hotel.id_hotel }}">
-                <button type="submit">Details</button>
+                <button type="submit"><i class="fa-solid fa-angles-right">&nbsp;&nbsp;</i>Details</button>
             </form>
                      
         </div>        
