--- a/app/templates/visitor/promotions_details.html
+++ b/app/templates/visitor/promotions_details.html
@@ -1,29 +1,70 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} voyage organise details - {{ id_promotion }} {% endblock title %}
+{% block url_8_class %}active{% endblock url_8_class %}
+{% block title %} voyage organise details - {{ id_voyage }} {% endblock title %}
+{% block block_css %}
+<style>
+    body .container {
+        height: 200px;
+        background-color: rgb(255, 255, 255);
+    }
+</style>
+{% endblock block_css %}
 {% block main %}
-<div style="height: 200px;"></div>
-
-<h1>{{ id_promotion }}</h1>
-
-<div class="mini-card-voyage">
+{% for avoir in avoir%}
+<div class="detailed-card-voyage">
     <div class="image">
         <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
-        {% comment %} <span class="reaction">
-            <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
-        </span> {% endcomment %}
     </div>
     <div class="body">
-        {% comment %} <span class="title">{{ promotion.id_promotion.titre_voyage }}</span> {% endcomment %}
-        {% comment %} <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ promotion.id_ville.id_pays.nom_pays }}, {{ promotion.id_ville.nom_ville }}</span> {% endcomment %}
-        <span class="price">Prix: <span>{{ promotion.id_promotion.percentage }} Dhs</span></span>
-        <span class="price">Nom hotel: <span>{{ promotion.id_promotion.id_voyage.id_hotel.nom_hotel }}</span></span>
-        {% comment %} <span class="rating">Durée: <span>{{ promotion.id_promotion.duree_voyage }} jours / {{ promotion.id_promotion.duree_voyage|add:"-1" }} nuits</span></span> {% endcomment %}
-        <span class="rating">Promotion: <span>{{ promotion.id_promotion.id_promotion.pourcentage }} %</span></span>
-        <form method="get" action="/promotions_details/{{ promotion.id_promotion.id_promotion }}">
+        <span class="title">{{ avoir.id_voyage.titre_voyage }}</span>
+        <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ avoir.id_ville.id_pays.nom_pays }}, {{ avoir.id_ville.nom_ville }}</span>
+        <div class="price">à partir de <span>{{ avoir.id_voyage.prix_voyage }} Dhs par personne</span></div>
+        <span class="price">Nom hotel: <span>{{ avoir.id_voyage.id_hotel.nom_hotel }}</span></span>
+        <span class="rating">Durée: <span>{{ avoir.id_voyage.duree_voyage }} jours / {{ avoir.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
+        <form method="get" action="/voyage_organise_details/{{ avoir.id_voyage.id_voyage }}">
             <button type="submit">J'en profit</button>
         </form>
-    </div>        
+    </div>            
 </div> 
+{%endfor%}
+<div class = "vols-box">
+    {% for vol in inclure %}
+    <div class="vol">
+        <div class="image-vol"> 
+            <img src="{% static "assets/royal-air-maroc.svg" %}">
+            <div class="from">{{ vol.id_vol.date_d_vol }}</div>
+            <div class="to">{{ vol.id_vol.date_f_vol }}</div>
+        </div>
+        <div class="body">
+            <p class="descrp">Hotel {{ vol.id_voyage.id_hotel.type_hotel }}etoiles, type de chambre: {{ vol.id_voyage.id_hotel.type_hotel }}</p>
+        </div>
+    </div>
+    {% endfor%}
+</div>
+<h4>Les commentaire sur ce voyage : </h4>
+{%for comment in comments%}
+<div class="comments">
+    <div class="comment">
+        <div class="author">{{comment.id_utilisateur.prenom}}</div>
+        <div class="text">{{comment.text_comment}}</div>
+        <div class="time">{{comment.heure_redaction}}, {{comment.date_redaction}}</div>
+        <div class="evaluation">{{comment.evaluation}}</div>
+    </div>
+</div>
+{%endfor%}
 {% endblock main %}
+{% block js_block %}
+<script>
+    const evaluation_div = document.querySelector('div[class="evaluation"]');
+    document.addEventListener('DOMContentLoaded', function() {
+    let evaluation = evaluation_div.textContent;
+    let text = '';
+    for(let i = 0; i < parseInt(evaluation); i++) {
+        text += '*';
+    }                
+    evaluation_div.innerHTML = text;
+});
+</script>
+{% endblock js_block %}
 
