--- a/app/templates/visitor/special_asie.html
+++ b/app/templates/visitor/special_asie.html
@@ -22,7 +22,7 @@
             <span class="price"><img src="{% static 'assets/background-pricing.png' %}" alt="background-pricing">Prix: <span>{{ avoir_instance.id_voyage.prix_voyage }} Dhs</span></span>
             <span class="nom-hotel">Nom hotel: <span>{{ avoir_instance.id_voyage.id_hotel.nom_hotel }}</span></span>
             <span class="rating">Durée: <span>{{ avoir_instance.id_voyage.duree_voyage }} jours / {{ avoir_instance.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
-            <form method="get" action="/voyage_organise_details/{{ avoir_instance.id_voyage.id_voyage }}">
+            <form method="get" action="{% url 'special_asie_details' avoir_instance.id_voyage.id_voyage %}">
                 <button type="submit"><i class="fa-solid fa-angles-right">&nbsp;&nbsp;</i>Details</button>
             </form>
                      
