--- a/app/templates/visitor/voyage_organise_details.html
+++ b/app/templates/visitor/voyage_organise_details.html
@@ -1,14 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block url_5_class %}active{% endblock url_5_class %}
 {% block title %} voyage organise details - {{ id_voyage }} {% endblock title %}
+{% block block_css %}
+<style>
+    body .container {
+        height: 200px;
+        background-color: rgb(255, 255, 255);
+    }
+</style>
+{% endblock block_css %}
 {% block main %}
 {% for avoir in avoir%}
 <div class="detailed-card-voyage">
     <div class="image">
         <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
-        <span class="reaction">
-            <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
-        </span> 
     </div>
     <div class="body">
         <span class="title">{{ avoir.id_voyage.titre_voyage }}</span>
