--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -73,7 +73,7 @@ header .inner1 .search {
     position: relative;
 }
 
-.search input {
+.inner1 .search input {
     border: 1px solid var(--second-underline);
     outline : none;
     border-radius: var(--main-border-radius);
@@ -84,12 +84,12 @@ header .inner1 .search {
     transition: all .2s ease;
 }
 
-.search input:hover {
+.inner1 .search input:hover {
     box-shadow: 0 2px 6px rgba(180, 177, 177, 0.749);
 }
 
 
-.search span {
+.inner1 .search span {
     position: absolute;
     width: 30px;
     height: 30px;
@@ -103,12 +103,12 @@ header .inner1 .search {
     cursor: pointer;
 }
 
-.search span i {
+.inner1 .search span i {
     color: #fff;
     background-color: var(--main--green);
 }
 
-.search input::placeholder {
+.inner1 .search input::placeholder {
     color: var(--main-gray);
 }
 
