--- a/app/templates/visitor/home.html
+++ b/app/templates/visitor/home.html
@@ -13,6 +13,9 @@
             background-color: rgb(100, 100, 100, 0.3);
             backdrop-filter: blur(20px);
         }
+        header .inner1 .log {
+            color: rgb(255, 255, 255);
+        }
         header .inner2 ul li a.active::before {
             background-color: rgb(255, 255, 255);
         }
@@ -39,18 +42,6 @@
         }
     </style>
 {% endblock block_css %}
-{% block js_block %} 
-    <script src="{% static 'js/home.js' %}" type="text/javascript"></script>
-    <script>
-        function toggleLike(heart) {
-            if (heart.src.includes('{% static "assets/like-full.svg" %}')) {
-                heart.src = '{% static "assets/like-empty.svg" %}';
-            } else {
-                heart.src = '{% static "assets/like-full.svg" %}';
-            }
-        }
-    </script>
-{% endblock %}
 {% block main %}
     <section class="first">
         <h2>VOTRE AGENCE DE VOYAGE EN LIGNE</h2>
@@ -107,3 +98,7 @@
         nothing
     </section>
 {% endblock %}
+{% block js_block %} 
+    <script src="{% static 'js/home.js' %}" type="text/javascript"></script>
+{% endblock %}
+
