--- a/app/templates/admin_pages/base.html
+++ b/app/templates/admin_pages/base.html
@@ -16,15 +16,15 @@
                 <img src="{% static 'assets/travelMor-logo-black.png' %}" alt="LOGO TRAVEL MOR">
             </div>
             <ul>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Voyages</a></li>
-                <li><a href="#">Hotels</a></li>
-                <li><a href="#">Promotions</a></li>
-                <li><a href="#">Vols</a></li>
-                <li><a href="#">Notifications</a></li>
-                <li><a href="#">Commentaires</a></li>
-                <li><a href="#">Villes</a></li>
-                <li><a href="{% url "pays_form" %}">Pays</a></li>
+                <li><a href="{% url "commentaires_gestion" %}">Dashboard</a></li>
+                <li><a href="{% url "commentaires_gestion" %}">Voyages</a></li>
+                <li><a href="{% url "commentaires_gestion" %}">Hotels</a></li>
+                <li><a href="{% url "promotions_gestion" %}">Promotions</a></li>
+                <li><a href="{% url "vols_gestion" %}">Vols</a></li>
+                <li><a href="{% url "notifications_gestion" %}">Notifications</a></li>
+                <li><a href="{% url "commentaires_gestion" %}">Commentaires</a></li>
+                <li><a href="{% url "villes_gestion" %}">Villes</a></li>
+                <li><a href="{% url "pays_gestion" %}">Pays</a></li>
             </ul>
         </nav>
         <div class="secondary-menu">
